--- a/views/practiceGameOne.ejs
+++ b/views/practiceGameOne.ejs
@@ -77,7 +77,7 @@
       var bombs;
 
       function preload() {
-        this.load.setBaseURL("http://labs.phaser.io");
+        this.load.setBaseURL("https://labs.phaser.io");
         // https://labs.phaser.io/assets/
 
         this.load.image("sky", "src/games/firstgame/assets/sky.png");
